--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "ioasys",
   "version": "1.0.0",
   "description": "Enterprise API free ERP",
-  "main": "index.js",
+  "main": "dist/src/shared/infra/http/server.js",
   "repository": "https://github.com/Tonybsilva-dev/ioasys-test",
-  "author": "<tonybsilvadev@gmail.com>",
+  "author": "Antonio Bernardino da Silva <tonybsilvadev@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --ignore node_modules src/shared/infra/http/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "dev": "tsnd -r tsconfig-paths/register --inspect --ignore node_modules src/shared/infra/http/server.ts",
+    "typeorm": "tsnd ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.17.2",
+    "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
@@ -24,10 +24,10 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.6",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.4.4"
   }
 }
